--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "python -m http.server 8000",
     "serve": "python3 -m http.server 8000",
     "dev": "python -m http.server 8000",
-    "build": "echo 'No build step required for static site'",
+    "build": "node build.js",
     "deploy": "echo 'Deploy to Netlify via git push'"
   },
   "repository": {
