Fix build issues: Add ESLint dependencies and configuration
- Added babel-eslint and eslint to devDependencies in package.json
- Created .eslintrc.js with minimal configuration for static site
- Added .eslintignore to prevent linting of static files
- Updated netlify.toml to run npm install before build
- Enhanced build.js with better error handling and logging
- Resolves babel-eslint missing package error during Netlify builds

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "url": "https://github.com/GoldJack1/railstatisticsweb/issues"
   },
   "homepage": "https://github.com/GoldJack1/railstatisticsweb#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.0.0"
+  },
   "dependencies": {},
   "engines": {
     "node": ">=14.0.0"
