--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
   publish = "."
 
   # Build command to inject environment variables
-  command = "npm run build"
+  command = "npm install && npm run build"
 
 [build.environment]
   # Node.js version
