Fix caniuse-lite dependency issue and add browser compatibility tools
- Added caniuse-lite to devDependencies to resolve build failure
- Added browserslist and autoprefixer for better browser compatibility
- Created .browserslistrc configuration for modern browser support
- Enhanced build.js with Netlify environment detection
- Ensures all required dependencies are available during Netlify builds

--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   "homepage": "https://github.com/GoldJack1/railstatisticsweb#readme",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.0.0"
+    "eslint": "^8.0.0",
+    "caniuse-lite": "^1.0.30001500",
+    "browserslist": "^4.21.0",
+    "autoprefixer": "^10.4.0"
   },
   "dependencies": {},
   "engines": {
