Fix build issues and add local testing support
- Updated dependencies to use current versions (@babel/eslint-parser, eslint 9.x)
- Added dotenv support for local environment variable testing
- Enhanced build.js with better error handling and local .env.local support
- Updated .eslintrc.js to use new @babel/eslint-parser
- Added .env.test to .gitignore for additional environment file protection
- Build script now works correctly both locally (with .env.local) and in production
- Tested build process locally - works perfectly with proper error messages

--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   },
   "homepage": "https://github.com/GoldJack1/railstatisticsweb#readme",
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^8.0.0",
+    "@babel/eslint-parser": "^7.23.0",
+    "eslint": "^9.0.0",
     "caniuse-lite": "^1.0.30001500",
-    "browserslist": "^4.21.0",
-    "autoprefixer": "^10.4.0"
+    "browserslist": "^4.23.0",
+    "autoprefixer": "^10.4.0",
+    "dotenv": "^16.3.0"
   },
   "dependencies": {},
   "engines": {
