Remove deprecated files and update project structure for Rail Statistics Landing Page
- Deleted unused configuration files including .browserslistrc, .eslintignore, and .eslintrc.js to streamline the project.
- Removed old HTML files (debug.html, export.html, matching.html, review.html, upload.html) and associated test files to focus on the new landing page structure.
- Updated build.js to reflect changes in the build process and improved logging for production builds.
- Adjusted package.json to rename the project from "rail-statistics-migration-tool" to "rail-statistics-landing" and updated the description accordingly.
- Cleaned up styles.css to remove unused styles and improve maintainability.

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
   publish = "."
 
   # Build command to inject environment variables
-  command = "npm install && npm run build"
+  command = "npm run build"
 
 [build.environment]
   # Node.js version
@@ -35,12 +35,7 @@
     Cache-Control = "public, max-age=31536000"
 
 [[headers]]
-  for = "/migration.js"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000"
-
-[[headers]]
-  for = "/*.js"
+  for = "/js/*.js"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 
