Update environment variable handling and improve .gitignore structure
- Modified build.js to process multiple HTML files for environment variable injection, enhancing maintainability.
- Updated fbstationtest.html and index.html to use placeholders for Firebase environment variables, allowing for dynamic injection during the build process.
- Refined .gitignore to better categorize ignored files, including environment variables and build outputs, while removing deprecated entries.
- Added support for additional temporary folders in .gitignore to streamline project management.

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,9 @@
 [build.environment]
   # Node.js version
   NODE_VERSION = "18"
+  # Build environment
+  NODE_ENV = "production"
+  NETLIFY = "true"
 
 # Redirect rules for SPA (Single Page Application) behavior
 [[redirects]]
