--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,25 @@
-# Firebase Configuration
-firebase-config.js
-
-# Environment Variables
-.env
-.env.local
-.env.production
-.env.test
-
-# Node modules (if using npm/yarn)
+# Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Firebase config (contains sensitive keys)
+firebase-config.js
+
 # Build outputs
 dist/
 build/
+.next/
+.nuxt/
+.vuepress/dist
 
 # IDE files
 .vscode/
@@ -23,13 +27,8 @@ build/
 *.swp
 *.swo
 
-# OS generated files
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Logs
@@ -45,30 +44,6 @@ pids
 # Coverage directory used by tools like istanbul
 coverage/
 
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# Netlify
-.netlify/
-
-# Temporary files
-*.tmp
-*.temp
+# Temporary folders
+tmp/
+temp/
