--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,9 @@
   base = "."
 
   # Directory that contains the deploy-ready HTML files and assets
-  publish = "."
+  publish = "dist"
 
-  # Build command to inject environment variables
+  # Build command to build React app with Vite
   command = "npm run build"
 
 [build.environment]
@@ -33,12 +33,12 @@
 
 # Cache static assets
 [[headers]]
-  for = "/styles.css"
+  for = "/assets/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 
 [[headers]]
-  for = "/js/*.js"
+  for = "/*.js"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 
@@ -52,4 +52,4 @@
   for = "/*.html"
   [headers.values]
     Cache-Control = "public, max-age=0, must-revalidate"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com; img-src 'self' data:; connect-src 'self' https://*.firebaseio.com https://*.googleapis.com;"
