--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "rail-statistics-landing",
+  "name": "rail-statistics-react",
   "version": "1.0.0",
-  "description": "Rail Statistics - A simple landing page for railway station tracking",
-  "main": "index.html",
+  "description": "Rail Statistics - A React application for railway station tracking",
+  "type": "module",
   "scripts": {
-    "start": "python3 -m http.server 8000",
-    "serve": "python3 -m http.server 8000",
-    "dev": "python3 -m http.server 8000",
-    "build": "node build.js",
-    "deploy": "echo 'Deploy to Netlify via git push'"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "vite",
+    "serve": "vite preview",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "deploy": "echo 'Deploy to Netlify via git push'",
+    "firebase:deploy": "firebase deploy --only firestore:rules"
   },
   "repository": {
     "type": "git",
@@ -17,7 +21,7 @@
   "keywords": [
     "rail",
     "statistics",
-    "landing-page",
+    "react",
     "firebase",
     "station-tracking"
   ],
@@ -27,9 +31,22 @@
     "url": "https://github.com/GoldJack1/railstatisticsweb/issues"
   },
   "homepage": "https://github.com/GoldJack1/railstatisticsweb#readme",
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
+    "firebase": "^10.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^6.8.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.9.2",
+    "vite": "^5.0.8"
+  },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
