Update Netlify and package configurations for improved compatibility and performance
- Modified netlify.toml to use Node.js version 20 and updated the build command to include npm ci for better dependency management.
- Added Vite build configuration options to enhance build performance and disable telemetry.
- Updated package.json to specify Node.js and npm engine requirements, ensuring compatibility with the latest versions.

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,14 +6,18 @@
   publish = "dist"
 
   # Build command to build React app with Vite
-  command = "npm run build"
+  command = "npm ci && npm run build"
 
 [build.environment]
-  # Node.js version
-  NODE_VERSION = "18"
+  # Node.js version - using Node 20 for better compatibility
+  NODE_VERSION = "20"
   # Build environment
   NODE_ENV = "production"
   NETLIFY = "true"
+  # Vite build configuration
+  VITE_BUILD_MODE = "production"
+  # Disable telemetry for faster builds
+  VITE_DISABLE_TELEMETRY = "true"
 
 # Redirect rules for SPA (Single Page Application) behavior
 [[redirects]]
