--- a/package.json
+++ b/package.json
@@ -32,18 +32,19 @@
   },
   "homepage": "https://github.com/GoldJack1/railstatisticsweb#readme",
   "dependencies": {
-    "firebase": "^11.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "firebase": "^11.10.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.30.1",
     "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^8.57.0",
+    "vite": "^5.4.20"
   },
   "engines": {
     "node": ">=20.0.0",
