--- a/package.json
+++ b/package.json
@@ -34,21 +34,21 @@
   "dependencies": {
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
     "firebase": "^11.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.30.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^6.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "typescript-eslint": "^8.43.0",
-    "vite": "^6.0.1"
+    "typescript-eslint": "^8.43.0"
   },
   "engines": {
     "node": ">=20.0.0",
